adding oauth logins

--- a/laravel/bower.json
+++ b/laravel/bower.json
@@ -26,6 +26,7 @@
       "angular-animate":"*",
       "angular-strap":"*",
       "angular-route":"*",
-      "jquery":"*"
+      "jquery":"*",
+      "satellizer":"*"
   }
 }
